--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo-container"> 
-        <img ngSrc="assets/icone.png" width="18" height="18" priority>
+        <img ngSrc="assets/ícone.png" width="32" height="32" priority>
         <span class="text-header">Rastreamento de entregas</span>
     </div>
 
