--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -1,3 +1,11 @@
-<google-map height="500px" width="100%">
-    <map-marker *ngFor="let entregador of entregadores" [position]="{ lat: entregador.lat, lng: entregador.lng }"></map-marker>
+<google-map
+  [options]="mapOptions"
+  height="460px"
+  width="100%"
+>
+  <map-marker
+    *ngFor="let entregador of entregadores"
+    [position]="entregador"
+  ></map-marker>
+  <map-marker [position]="entregadorLocation"></map-marker>
 </google-map>
