--- a/src/app/painel-geral/painel-geral.component.scss
+++ b/src/app/painel-geral/painel-geral.component.scss
@@ -1,229 +1,3 @@
-@use "sass:color";
-@use '../variables.scss' as vars;
-
-header {
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 18px;
-  background-color: #F8F9FA;
-  height: 60px;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
-.icone-text-header {
-  width: 50vw;
-  height: 5vw;
-  color: #343A40;
-  font-family: "Poppins", serif;
-  font-weight: 300;
-  font-size: 12px;
-  letter-spacing: 2px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 16px;
-}
-
-.nova-entrega-perfil {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 40px;
-}
-
-.btn-nova-entrega {
-  font-family: 'Poppins', serif;
-  font-size: 14px;
-  font-weight: 600;
-  letter-spacing: 3px;
-  color: #FFFFFF;
-  background-color: vars.$primary-color;
-  border: none;
-  border-radius: 8px;
-  padding: 6px 16px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: color.adjust(vars.$primary-color, $lightness: 12%);
-  }
-}
-
-.profile {
-  cursor: pointer;
-  background: none;
-  border: none;
-  padding: 0;
-}
-
-.sidebar {
-  width: 12.5rem;
-  height: 100vh;
-  padding: 20px;
-  font-family: 'Montserrat', serif;
-  font-size: 14px;
-  font-weight: 500;
-  color: #FFFFFF;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(to bottom, #495057, #343A40);
-  position: fixed;
-  top: 60px;
-  left: 0;
-  z-index: 999;
-  transition: width 0.3s ease;
-
-  &.collapsed {
-    width: 60px; 
-
-    nav {
-      display: none;
-    }
-
-    .btn-close {
-      display: none;
-    }
-
-    .btn-reabrir-sidebar {
-      display: block;
-    }
-  }
-
-  .btn-close {
-    display: block; 
-    position: absolute;
-    top: 6px;
-    right: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    color: #FFFFFF;
-    z-index: 1000;
-    transition: color 0.3s ease;
-
-    &:hover {
-      color: vars.$primary-color;
-    }
-  }
-
-  .btn-reabrir-sidebar {
-    display: none;
-    cursor: pointer;
-    font-size: 24px;
-    text-align: center;
-    padding: 16px;
-    background-color: #34495e;
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    box-sizing: border-box;
-
-    &:hover {
-      background-color: #1abc9c;
-    }
-  }
-
-  nav ul {
-    padding: 0;
-    list-style: none;
-
-    li {
-      margin-top: 10px;
-      margin-bottom: 10px;
-
-      a {
-        text-decoration: none;
-        color: #FFFFFF;
-        display: inline-block;
-        padding: 12px 0;
-        transition: color 0.3s ease;
-
-        &:hover {
-          color: vars.$primary-color;
-        }
-
-        &.active {
-          color: vars.$primary-color;
-          font-weight: bold;
-        }
-      }
-    }
-  }
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  margin-left: 220px; 
-  padding: 20px;
-  margin-top: 60px;
-  padding-bottom: 80px;
-  transition: margin-left 0.3s ease;
-
-  .sidebar.collapsed ~ & {
-    margin-left: 80px; 
-  }
-}
-
-.map-wrapper{
-  position: relative;
-  width: 100%;
-}
-
-app-dados-entrega {
-  position: absolute;
-  top: 20px; 
-  left: 20px; /* Ajuste a distância da esquerda conforme necessário */
-  background-color: rgba(255, 255, 255, 0.9); /* Fundo branco com alguma transparência */
-  border: 1px solid #ccc;
-  padding: 15px;
-  z-index: 1000; /* Garante que fique acima do mapa */
-  width: 300px; /* Ajuste a largura conforme necessário */
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-}
-
-.mapa-container {
-  height: 460px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-
-.entregas-container {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.entrega-item {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #f9f9f9;
-}
-
-footer {
-  font-family: 'Merriweather', serif;
-  font-size: 12px;
-  font-weight: 200;
-  color: #FFFFFF;
-  width: 100%;
-  height: 3.75rem;
-  background-color: #343A40;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
+.painel-wrapper {
+  display: flex
 }
