--- a/src/app/mapa/mapa.component.scss
+++ b/src/app/mapa/mapa.component.scss
@@ -1,5 +1,12 @@
-:host {
-    display: block;
-    height: 70%;
-    width: 100%;
-  }
+:host, .map-container {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  overflow: hidden; 
+}
+
+google-map {
+  width: 100%;
+  height: 100%;
+}
