Correção de versão Angular para rodar ngx-charts.

--- a/src/app/painel-geral/painel-geral.component.html
+++ b/src/app/painel-geral/painel-geral.component.html
@@ -1,7 +1,13 @@
-<div class="painel-wrapper">
-  <app-sidebar class="sidebar-container"></app-sidebar>
-  
-  <main class="content-container">
-    <router-outlet></router-outlet>
-  </main>
-</div>
+<main class="dashboard-grid">
+  <div class="lista-container">
+    <app-lista-entregas (entregaSelecionada)="onEntregaSelecionada($event)"></app-lista-entregas>
+  </div>
+
+  <div class="dashboard-container">
+    <app-dashboard-lojista></app-dashboard-lojista>
+
+    <div class="map-overlay" *ngIf="entregaSelecionada">
+      <app-mapa [entrega]="entregaSelecionada"></app-mapa>
+    </div>
+  </div>
+</main>
