--- a/src/app/painel-geral/painel-geral.component.scss
+++ b/src/app/painel-geral/painel-geral.component.scss
@@ -1,3 +1,33 @@
-.painel-wrapper {
-  display: flex
+:host {
+  display: block;
+  height: 100%;
+}
+
+.dashboard-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  height: 100%;
+  padding: 20px;
+}
+
+.lista-container, .dashboard-container {
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard-container {
+  position: relative;
+}
+
+.map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 10;
 }
